--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .header-one input[type=search] {
     border-radius: 10px;
     font-size: 17px;
@@ -10,6 +15,12 @@
 .sidebar {
     grid-row-start: 1;
     grid-row-end: 3;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(121, 165, 231);
+    color:rgb(255, 255, 255);
+    margin-top: -10px;
+
 }
 
 .header {
@@ -68,6 +79,42 @@ img {
     grid-column-end: 4;
     grid-row-start: 2;
 }
-.trending {
+
+.logo {
+    display: flex;
+    margin: 20px;
+    margin-left: 10px;
+}
+.logo-text {
+    margin: 0;
+    margin-top: 6px;
+    margin-left: 10px;
+}
+
+.menu-one,
+.menu-two {
+    font-size: 25px;
+    font-weight: 600;
+    margin-top: 16px;
+}
+li {
+ list-style:  none;
+ margin: 20px;
+ margin-left: -20px;
+}
+
+.sidebar #logo {
+    width: 50px;
+    height: 50px;
     
+}
+
+.sidebar img {
+    width: 30px;
+    height: 25px;
+    margin-bottom: -5px;
+    filter: brightness(0) invert(1);    
+}
+.menu-two {
+    margin-top: 16px;
 }
