--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
 .container {
     display: grid;
     grid-template-columns: 1fr 3fr ;
+
+    
    
 }
 .sidebar {
@@ -17,7 +19,8 @@ body {
     flex-direction: column;
     background-color: rgb(73, 125, 202);
     color:rgb(255, 255, 255);
-    width: 22vw;
+ 
+ 
 
 }
 
@@ -27,6 +30,7 @@ img {
     border-radius: 100px;
     
 }
+
 
 
 
@@ -43,6 +47,7 @@ img {
 .announcements {
     display: flex;
     flex-direction: column;
+    margin-top: 0.5em;
    
 }
 
@@ -50,6 +55,7 @@ img {
     display: flex;
     flex-direction: column;
     margin-top: 85px;
+
    
 }
 
@@ -57,6 +63,7 @@ img {
     display: flex;
     margin: 20px;
     margin-left: 10px;
+    flex-wrap: wrap;
 }
 .logo-text {
     margin: 0;
@@ -69,6 +76,7 @@ img {
     font-size: 25px;
     font-weight: 700;
     margin-top: 3em;
+
 }
 li {
  list-style:  none;
@@ -77,16 +85,16 @@ li {
 }
 
 .sidebar #logo {
-    width: 4em;
-    height: 4em;
+    width: 3em;
+    height: 3em;
     
 }
 
 .sidebar img {
-   
-    
-  
-    filter: brightness(0) invert(1);    
+    width: 1em;
+    height: 1em;
+    filter: brightness(0) invert(1); 
+
 }
 .menu-two {
     margin-top: 16px;
@@ -95,6 +103,7 @@ li {
 .search-bar {
     display: flex;
     padding-top: 2em;
+
 
     
 }
@@ -170,6 +179,7 @@ li {
     display: flex;
     flex-direction: column;
     height: 16vh;
+    padding-left: 1em;
 }
 
 .header-one {
@@ -216,9 +226,11 @@ li {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(1, 1fr);
-    padding: 30px;
+    padding: 1em;
     background-color: rgb(219, 221, 233);
     margin-top: 10vh;
+  
+
     
 }    
 
@@ -298,8 +310,20 @@ button:hover {
 .header-one #user-name {
     font-size: 20px;
 }
-.projects {
-    margin-left: 0;
-    padding: 0;
+
+.picons {
+    position:relative;
+    display: flex;
+     margin-left: 12rem;
+     margin-top: 3.5rem;
+     
+ 
+
+    
+   
+}
+.picons img {
+ margin-left: 1em;
+
 }
 
